[gd_scene load_steps=15 format=3 uid="uid://dm2hkabku0r6d"]

[ext_resource type="FontFile" uid="uid://bdmxedf82gkad" path="res://Dialogue/Fonts/atascii.ttf" id="1_dkb4k"]
[ext_resource type="Texture2D" uid="uid://cyymfgxx04wfc" path="res://Images/menu/menu (1).png" id="2_2e6p5"]
[ext_resource type="Script" uid="uid://cb1go8juhp7an" path="res://cenas/main_menu.gd" id="2_dp1fb"]
[ext_resource type="Theme" uid="uid://b86p0g4pt4kcc" path="res://botoes.tres" id="5_um4lk"]
[ext_resource type="AudioStream" uid="uid://p1afbcwis0b" path="res://sounds/musics/chiphead64 - 11pm.mp3" id="6_itywf"]
[ext_resource type="Texture2D" uid="uid://br2c3fwgttnxe" path="res://Images/hud/telainicio.png" id="7_kgs3e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d17uf"]
bg_color = Color(0.263325, 0.303299, 0.358269, 1)
border_width_bottom = 5
border_color = Color(0.12618, 0.149867, 0.182435, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 5.0
expand_margin_top = 2.0
expand_margin_right = 5.0
expand_margin_bottom = 2.0
shadow_offset = Vector2(2, 2)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2353f"]
bg_color = Color(0.211765, 0.247059, 0.294118, 1)
border_width_bottom = 5
border_color = Color(0.12549, 0.14902, 0.184314, 0.568627)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 5.0
expand_margin_top = 2.0
expand_margin_right = 5.0
expand_margin_bottom = 2.0
shadow_offset = Vector2(2, 2)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mcs3e"]
bg_color = Color(0.145544, 0.17167, 0.20759, 1)
border_width_bottom = 5
border_color = Color(0.12618, 0.149867, 0.182435, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 5.0
expand_margin_top = 2.0
expand_margin_right = 5.0
expand_margin_bottom = 2.0
shadow_offset = Vector2(2, 2)
anti_aliasing = false

[sub_resource type="Theme" id="Theme_10d0g"]
Button/fonts/font = ExtResource("1_dkb4k")
Button/styles/hover = SubResource("StyleBoxFlat_d17uf")
Button/styles/normal = SubResource("StyleBoxFlat_2353f")
Button/styles/pressed = SubResource("StyleBoxFlat_mcs3e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nr6wo"]
texture = ExtResource("2_2e6p5")

[sub_resource type="Animation" id="Animation_8d0x7"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="Animation_s3sy8"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6r25w"]
_data = {
&"fade_in_cuts": SubResource("Animation_8d0x7"),
&"fade_out_cuts": SubResource("Animation_s3sy8")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_10d0g")
script = ExtResource("2_dp1fb")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_nr6wo")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(321, 181)
scale = Vector2(0.416667, 0.416667)
texture = ExtResource("7_kgs3e")

[node name="start" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 166.0
offset_top = 70.0
offset_right = 263.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("5_um4lk")
text = "Jogar"

[node name="creditos" type="Button" parent="."]
layout_mode = 2
offset_left = 486.0
offset_top = 284.0
offset_right = 583.0
offset_bottom = 309.0
size_flags_vertical = 3
theme = ExtResource("5_um4lk")
text = "Cr√©ditos
"

[node name="sair" type="Button" parent="."]
layout_mode = 2
offset_left = 486.0
offset_top = 318.0
offset_right = 583.0
offset_bottom = 343.0
size_flags_vertical = 3
theme = ExtResource("5_um4lk")
text = "Sair"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_itywf")
volume_db = 9.0
autoplay = true
bus = &"Music"

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6r25w")
}

[node name="ColorRect" type="ColorRect" parent="Transition"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -46.0
offset_top = -113.0
offset_right = 52.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="sair" to="." method="_on_sair_pressed"]
[connection signal="animation_finished" from="Transition" to="." method="_on_transition_animation_finished"]
